try to footer responsive

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "black_han_sansregular";
-  background: #c1c1c1;
+  background: #cecbcb;
 }
 
 a {
