--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "black_han_sansregular";
-  background: #cecbcb;
+  background: #f3f3fd;
 }
 
 a {
@@ -15,7 +15,7 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -23,4 +23,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
